--- a/core/locale/cs_CZ/dateformat.xml
+++ b/core/locale/cs_CZ/dateformat.xml
@@ -7,18 +7,24 @@
 	<label index="D2MshortY4">%b %d %y</label>
 	<label index="D2MshortY2">%b %d %Y</label>
 	<label index="D2Mshort">%b %d</label>
+	<label index="DshortDMlong">%a %e %B</label>
+	<label index="DshortDMshort">%a %e %b</label>
+	<label index="DMshort">%e %b</label>
 	<label index="D2MshortTime">%b %d %H:%M</label>
 	<label index="dShort">%a</label>
 	<label index="DshortD2M2">%a %d %m</label>
+	<label index="DshortD">%a %e</label>
 	<label index="D2MlongY4">%B %d %Y</label>
-	<label index="MlongD2">%B %d</label>
 	<label index="Mlong">%B</label>
+	<label index="MlongD2">%B %d</label>
 	<label index="MlongY4">%B %Y</label>
 	<label index="DshortD2MshortY2">%a, %b %d %y</label>
 	<label index="DshortD2MlongY4">%a, %B %d %Y</label>
 	<label index="DlongD2MlongY4">%A, %B %d %Y</label>
+	<label index="DlongDMlongY4">%A, %B %e %Y</label>
 	<label index="calendarweek">CW %W</label>
 	<label index="date">%d/%m/%Y</label>
+	<label index="dateMshort">%e. %b</label>
 	<label index="time">%H:%M</label>
 	<label index="timesec">%H:%M:%S</label>
 	<label index="datetime">%d/%m/%y %H:%M</label>
