--- a/install/locale/cs_CZ/installer.xml
+++ b/install/locale/cs_CZ/installer.xml
@@ -4,7 +4,7 @@
 	<label index="type.install">Instalace todoyu</label>
 	<label index="type.update">Aktualizace todoyu</label>
 	<label index="locale.title">Zvolte jazyk instalace</label>
-	<label index="locale.selectthislocale">Instaluj todoyu v češtině</label><!-- name of the current locale language -->
+	<label index="locale.selectthislocale">Instaluj todoyu v češtině</label>
 	<label index="locale.text">Zvolte jazyk ve kterém má probíhat instalace:</label>
 	<label index="license.eula">Licenční ujednání koncového uživatele</label>
 	<label index="license.lgpl">Následující knihovny třetích stran jsou licencovány pomocí LGPL v2.1</label>
@@ -37,7 +37,7 @@
 	<label index="dbselect.selectDB">Zvolte databázi</label>
 	<label index="dbselect.orCreateDB">nebo vytvořte novou:</label>
 	<label index="dbselect.dbEmpty">prázdná</label>
-	<label index="dbselect.dbNotEmpty">neprázdná</label>
+	<label index="dbselect.dbNotEmpty">není prázdná</label>
 	<label index="dbselect.tables">tabulky</label>
 	<label index="dbselect.manual">Jestliže detekce dostupných databází je z bezpečnostních důvodů na vašem serveru zakázána a výše zmíněné pole neobsahuje nic na výběr, zadejte prosím jméno vaší databáze zde:</label>
 	<label index="importtables.title">Import databázových tabulek</label>
@@ -48,14 +48,14 @@
 	<label index="systemconfig.title">Konfigurace systému</label>
 	<label index="systemconfig.button">Uložit konfiguraci systému</label>
 	<label index="systemconfig.name">Jméno systému</label>
-	<label index="systemconfig.email">Email systému</label>
+	<label index="systemconfig.email">E-mail systému</label>
 	<label index="systemconfig.language">Jazyk</label>
 	<label index="systemconfig.locale">Jazyk (Stát)</label>
 	<label index="systemconfig.timezone">Časová zóna</label>
 	<label index="systemconfig.text">Zadejte základní konfiguraci systému</label>
-	<label index="systemconfig.text.error">Zadejte prosím jméno systému a Emailovou adresu</label>
+	<label index="systemconfig.text.error">Zadejte prosím jméno systému a e-mailovou adresu</label>
 	<label index="adminaccount.title">Tvorba účtu správce</label>
-	<label index="adminaccount.email">Email správce</label>
+	<label index="adminaccount.email">E-mail správce</label>
 	<label index="adminaccount.button">Vytvořit účet správce</label>
 	<label index="adminaccount.username">Uživatelské jméno</label>
 	<label index="adminaccount.password">Heslo</label>
