* Added serbia and montenegro to country and currency list

--- a/core/locale/de_DE/static_country.xml
+++ b/core/locale/de_DE/static_country.xml
@@ -237,4 +237,6 @@
 	<label index="ZWE">Simbabwe</label>
 	<label index="PSE">Palästinensische Territorien</label>
 	<label index="HMD">Heard und McDonaldinseln</label>
+	<label index="SRB">Serbien</label>
+	<label index="MNE">Montenegro</label>
 </labels>
