--- a/core/locale/en_GB/static_country.xml
+++ b/core/locale/en_GB/static_country.xml
@@ -237,4 +237,6 @@
 	<label index="ZWE">Zimbabwe</label>
 	<label index="PSE">Palestinian Territory</label>
 	<label index="HMD">Heard Island and McDonald Islands</label>
+	<label index="SRB">Serbia</label>
+	<label index="MNE">Republic of Montenegro</label>
 </labels>
