--- a/core/locale/zh_CN/static_country.xml
+++ b/core/locale/zh_CN/static_country.xml
@@ -237,4 +237,6 @@
 	<label index="ZWE">津巴布韦共和国</label>
 	<label index="PSE">巴勒斯坦领土</label>
 	<label index="HMD">赫德岛和麦克唐纳岛</label>
+	<label index="SRB">塞尔维亚</label>
+	<label index="MNE">黑山共和国</label>
 </labels>
