--- a/core/locale/zh_CN/form.xml
+++ b/core/locale/zh_CN/form.xml
@@ -12,8 +12,11 @@
 	<label index="databaserelation.nolabel">[New Entry]</label>
 	<label index="databaserelation.expandAllRecords">显示详情</label>
 	<label index="error.notUnique">entry 已存在</label>
+	<label index="error.duration.invalidinput">输入的时间不合法, 请纠正.</label>
 	<label index="ac.noResults">自动完成: 没有找到</label>
 	<label index="is_preferred">偏好</label>
+	<label index="confirm.toggle.is_preferred.on">一次只允许一个此类型的记录, 要选择此记录么?</label>
+	<label index="confirm.toggle.is_preferred.off">一次只允许一个此类型的记录, 不选择此记录么?</label>
 	<label index="dateselector.open">打开日期选择器选择日期</label>
 	<label index="autocompleteInfo">自动完成项. 请输入以得到建议</label>
 	<label index="legend.main">角色定义</label>
