--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -1,6 +1,7 @@
 todoyu core changelog
 
 core 2.2.0 - not released yet
+	* Added: Parity of list items in widgets is refreshed on drop/resort
 	* Added: Balloon info rendering, style and JS
 	* Added: Hooks in TodoyuMail
 	* Added: Empty listing shows "no items" notice
@@ -30,9 +31,9 @@ core 2.2.0 - not released yet
 	* Added: Initialize fake console element to prevent errors on console.log() in not supporting browsers
 	* Added: Todoyu.Helper.cloneObject() for deep object copy (alternative to Object.clone())
 	* Added: Javascript form submit helpers (simple file upload)
-	* Added: TodoyuRenderer::renderSelectGrouped(). Extracted from a dwoo plugin
+	* Added: TodoyuRenderer::renderSelectGrouped(). Extracted from a Dwoo plugin
 	* Added: Dwoo plugin {restrictAdmin}retricted content{/restrictAdmin}
-	* Added: Moved dwoo plugins from calendar extension to core: {formatDuration}, {formatRange}
+	* Added: Moved Dwoo plugins from calendar extension to core: {formatDuration}, {formatRange}
 	* Added: date locale format label "dateMshort"
 	* Changed: Removed currencyFormat from core
 	* Changed: Listing renderer requires and renders additionally to columns now also record ID
@@ -55,7 +56,7 @@ core 2.2.0 - not released yet
 	* Changed: ListingRenderer behaviour. Changed Parameter sword to params to be more flexible.
 	* Changed: Rich Text Editor (tinyMCE) uses now advanced mode with some additional edit features
 	* Changed: Renamed config/admin.php to config/sysmanager.php because admin extension was removed
-	* Changed: Renamed dwoo plugin {Workload} to {formatDuration}
+	* Changed: Renamed Dwoo plugin {Workload} to {formatDuration}
 	* Changed: Renamed TodoyuTime::sec2hours() to formatHours()
 	* Changed: Scroll to error in form when form is initialized with errors
 	* Removed: scal calendar/date picker library
@@ -89,7 +90,7 @@ core 2.1.3 - 2011-11-17
 	* Bugfix: Checkbox had problem with default value
 	* Bugfix: ReplyTo & sender of emails were automatically set to the system mail
 	* Bugfix: Simplified textarea auto resize. Works now in all major up-to-date browsers
-	* Bugfix: XML entities were encoded inside of dwoo tags which caused parse error in template engine (dwoo)
+	* Bugfix: XML entities were encoded inside of Dwoo tags which caused parse error in template engine
 	* Bugfix: Hiding of notifications of the same type failed when more than 2 dots were in the identifier
 	* Added: Auto-focus RTE of first form field (e.g. comment text)
 	* Added: Cropping for database relation labels in form
@@ -232,7 +233,7 @@ core 2.1.0 - 2011-06-17
 core 2.0.8 - beta
 	* Bugfix: Added forgotten button label to "add person" button of role form
 	* Bugfix: Deleted persons were shown in persons list of role
-	* Feature: Added dwoo plugin: addslashes, escaped installer-written strings inside config file
+	* Feature: Added Dwoo plugin: addslashes, escaped installer-written strings inside config file
 	* Feature: Text form fields are trimmed before saving
 	* Bugfix: file downloads fail with internet explorer and https connection
 
