--- a/lib/js/tiny_mce/changelog.txt
+++ b/lib/js/tiny_mce/changelog.txt
@@ -1,3 +1,14 @@
+Version 3.5 (2012-05-03)
+	Fixed menu rendering issue if the document was in rtl mode.
+	Fixed bug where the hide function would throw an error about a missing variable.
+	Fixed bug where autolink wouldn't convert URLs when hitting enter on IE due to the new enter key logic.
+	Fixed bug where formatting using shortcuts like ctrl+b wouldn't work properly the first time.
+	Fixed bug where selection.setContent after a formatter call wouldn't generate formatted contents.
+	Fixed bug where whitespace would be removed before/after invalid_elements when they where removed.
+	Fixed bug where updating styles using the theme image dialog in non inline mode on IE9 would produce errors.
+	Fixed bug where IE 8 would produce an error when using the contextmenu plugin.
+	Fixed bug where delete/backspace could remove contents of noneditable elements.
+	Fixed so background color in style preview gets computed from body element if the current style element is transparent.
 Version 3.5b3 (2012-03-29)
 	Added cancel button to colour picker dialog.
 	Added figure and figcaption to the html5 visualblocks plugin.
@@ -46,15 +57,6 @@ Version 3.5b1 (2012-03-08)
 	Fixed bug where the advlink dialog would produce an error about the addSelectAccessibility function not being defined.
 	Fixed bug where the caret would be placed at an incorrect position if span was removed by the invalid_elements setting.
 	Fixed bug where elements inside a white space preserve element like pre didn't inherit the behavior while parsing.
-Version 3.4.9.x (2012-02-xx)
-	Improved behaviour of backspacing into a table to be consistant across browsers and disable backspace when cursor immediately follows a table.
-	Improved edit CSS style plugin for single and multiple block selection and provide option to apply style to only selected text.
-	Fixed bug in Chrome where moving caret down in table and pasting throws errors.
-	Corrected reference to TinyMCE trim function.
-	Fixed bug where Ignore All in IE did not remove the underline from the selected word.
-	Fixed bug in html source editor word wrap option not wrapping text in Webkit browsers.
-	Fixed bug where it was possible to insert an invalid colour in the color pop-up dialog.
-	Fixed bug in Webkit where if anchor is on last line by itself caret can not be placed after it.
 Version 3.4.9 (2012-02-23)
 	Added settings to wordcount plugin to configure update rate and checking wordcount on backspace and delete using wordcount_update_rate and wordcount_update_on_delete.
 	Fixed bug in Webkit and IE where deleting empty paragraphs would remove entire editor contents.
