--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -5,6 +5,7 @@ core 2.2.1 - not released yet
 	* Bugfix: Duration Pickers configuration failed
 	* Bugfix: Class for fieldset didn't work properly/clean
 	* Bugfix: isRequired() checks now for available field and for false value
+	* Bugfix: Contenttab did not store selected tab correctly
 	* Added: Form element time was not available
 	* Added: Todoyu.Form.isFirstInputInForm()
 	* Added: TodoyuFormElement::removeAttribute()
