--- a/core/locale/de_DE/global.xml
+++ b/core/locale/de_DE/global.xml
@@ -25,6 +25,7 @@
 	<label index="show">Zeigen</label>
 	<label index="showDetails">Details anzeigen</label>
 	<label index="showMore">Mehr anzeigen</label>
+	<label index="inactive">inaktiv</label>
 	<label index="listing.noItems">Es wurden keine Einträge gefunden.</label>
 	<label index="hide">Verstecken</label>
 	<label index="unhide">Sichtbar machen</label>
@@ -77,6 +78,7 @@
 	<label index="input.autocompleter">Autovervollständigende Eingabe</label>
 	<label index="ajax.requestFailed">Keine Verbindung zum Server (Verbindungs- oder Serverprobleme?)</label>
 	<label index="attr.is_active">Aktiv</label>
+	<label index="attr.position">Position</label>
 	<label index="roles">Rollen</label>
 	<label index="role">Rolle</label>
 	<label index="role.new">Neue Rolle</label>
