--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -53,6 +53,7 @@ core 2.3.0 - not released yet
 	* Added: TodoyuArray::assureFromSerialized()
 	* Added: TodoyuDebug::getBacktrace()
 	* Added: Todoyu.ListScrollLoader()
+	* Added: class TodoyuTimezoneManager
 	* Changed: extracted select-group-options from template
 	* Changed: Renamed TodoyuArray::prefix() to prefixValues()
 	* Changed: Removed $parseConstants from TodoyuArray::intExplode(). Was not used and supported. Added $limi parameter as for trimExplode()
