--- a/core/locale/ru_RU/dateformat.xml
+++ b/core/locale/ru_RU/dateformat.xml
@@ -17,7 +17,7 @@
 	<label index="DshortD2MshortY2">%a, %d %b %y</label>
 	<label index="DshortD2MlongY4">%a, %d %B %Y</label>
 	<label index="DlongD2MlongY4">%A, %d %B %Y</label>
-	<label index="calendarweek">KW %W</label>
+	<label index="calendarweek">KW %V</label>
 	<label index="date">%d.%m.%Y</label>
 	<label index="time">%H:%M</label>
 	<label index="timesec">%H:%M:%S</label>
