--- a/core/locale/en_GB/dateformat.xml
+++ b/core/locale/en_GB/dateformat.xml
@@ -22,7 +22,7 @@
 	<label index="DshortD2MlongY4">%a, %B %d %Y</label>
 	<label index="DlongD2MlongY4">%A, %B %d %Y</label>
 	<label index="DlongDMlongY4">%A, %B %e %Y</label>
-	<label index="calendarweek">CW %W</label>
+	<label index="calendarweek">CW %V</label>
 	<label index="date">%d/%m/%Y</label>
 	<label index="dateMshort">%e. %b</label>
 	<label index="time">%H:%M</label>
