removed admin extension from default extconf and extensions list

--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -1,7 +1,7 @@
 todoyu core changelog
 
 core 2.3.0 - not released yet
-	* Added: css-cropping of list table content
+	* Added: CSS-cropping of list table content
 	* Added: JS Array.prototype.remove - make array items removable
 	* Added: Accept exclamation mark in link parsing
 	* Added: Basic style for warning messages
@@ -36,7 +36,7 @@ core 2.3.0 - not released yet
 	* Added: Todoyu::getSystemLocale() to access system fallback locale directly
 	* Added: TodoyuViewHelper::getAvailableLocaleOptions() and TodoyuViewHelper::geAllLocaleOptions()
 	* Added: TodoyuFormElement_Select->setSourceFunction() to modify source function
-	* Added: TodoyuForm->addOnDisplayJsCallback() to call a js callback when form is displayed
+	* Added: TodoyuForm->addOnDisplayJsCallback() to call a JS callback when form is displayed
 	* Added: TodoyuArray::implode() and ::explode()
 	* Added: TodoyuForm->getFieldData() to get a single field value from formdata
 	* Added: TodoyuFormElement_Select->setNoPleaseSelect()
@@ -60,7 +60,7 @@ core 2.3.0 - not released yet
 	* Changed: extracted select-group-options from template
 	* Changed: Renamed TodoyuArray::prefix() to prefixValues()
 	* Changed: Removed $parseConstants from TodoyuArray::intExplode(). Was not used and supported. Added $limi parameter as for trimExplode()
-	* Changed: Use js version instead of php the check for the first input in form
+	* Changed: Use JS version instead of php the check for the first input in form
 	* Changed: Update form XSD validation to match know field types only
 	* Changed: Created instances for parsing form xml files to prevent overlapping when multiple forms are parsed parallel
 	* Changed: Group label of selectgrouped is now parsed as label
@@ -80,7 +80,7 @@ core 2.3.0 - not released yet
 	* Changed: Raise php memory limit when a mail is sent with attachments
 	* Bugfix: Fixed linux-chrome-styling-bug
 	* Bugfix: styling bug in sortable panel list
-	* Bugfix: Fixed and clean-up js-calendar styling
+	* Bugfix: Fixed and clean-up JSCalendar styling
 	* Bugfix: SearchList-input value clearing disabled text-navigation
 	* Bugfix: Fixed bug in the assistNumericInput method
 	* Bugfix: Changed date-format for calendar week to ISO-8601
@@ -147,7 +147,7 @@ core 2.2.0 - 2012-05-03
 	* Changed: Unified method naming - getDateXXX() getPersonXXX() getPersonXXXID()
 	* Changed: Renamed TodoyuFieldset to TodoyuFormFieldset
 	* Changed: Prevent selection of disabled select option
-	* Changed: Todoyu.Time: time means now php timestamp and date means js date object (for vars and methods)
+	* Changed: Todoyu.Time: time means now php timestamp and date means JS date object (for vars and methods)
 	* Changed: Updates of date fields with the popup calendar will now trigger a change event
 	* Changed: Used faster (int) instead of intval() for integer typecasting
 	* Changed: Moved getDayTimestamps(), getDayTimestampsMap() to TodoyuDayRange
@@ -237,7 +237,7 @@ core 2.1.2 - 2011-09-15
 	* Changed: Made TodoyuLabelManager::$cache private
 	* Changed: Made TodoyuLabelManger::getFallbackLocales private
 	* Changed: Comment out unused database relation input field (relations have their own sub fields)
-	* Changed: Cleanup adding the language file for jscalendar
+	* Changed: Cleanup adding the language file for JSCalendar
 	* Changed: Set default dummy timezone to prevent problems with date() before setting the users timezone
 	* Changed: Allow installation in not empty database (as long as no conflicts with existing tables occurs)
 	* Changed: Simplified TodoyuForm::injectFieldset (by Captain_FLAM)
@@ -255,7 +255,7 @@ core 2.1.2 - 2011-09-15
 	* Added: Hooks core.record.add, core.record.update, core.record.delete
 	* Added: Added getRowCount() method to TodoyuDatabase
 	* Remove: Removed unused function TodoyuArray::convertToUTF8Array
-	* Updated: JsCalendar library updated. Added some extra utf-8 language packages (provided by Captain_FLAM)
+	* Updated: JSCalendar library updated. Added some extra utf-8 language packages (provided by Captain_FLAM)
 	* Updated: tinyMCE 3.4.4
 
 core 2.1.1 - 2011-07-25
@@ -328,7 +328,7 @@ core 2.1.0 - 2011-06-17
 	* Changed: Replaced functions of Prototype 1.6 with newer versions for 1.7
 	* Changed: Database connection uses now default sql mode (removed sql_mode=ansi)
 	* Added: Added locale en_US for proper date formatting
-	* Added: Todoyu.Helper.cropText() to crop text in js
+	* Added: Todoyu.Helper.cropText() to crop text in JS
 	* Added: addJsOnloadedFunction has now an autobind parameter
 	* Translation: Updated german, russian and japanese translation updates
 
